tests/Unit/PHPStan/Rules/Fixtures/SingleClassPerFile/Invalid/TwoInterfaces.php
<?php

declare(strict_types=1);

namespace SquidIT\Tests\PhpCodingStandards\Unit\PHPStan\Rules\Fixtures\SingleClassPerFile\Invalid;

interface TwoInterfacesFirst {}

interface TwoInterfacesSecond {}
